stylesheet.css
::-webkit-scrollbar {
    width: 10px;
    background-color: var(--white);
}
::-webkit-scrollbar-thumb {
    background: var(--elBlue); 
    /* border-radius: 5px; */
}
::-webkit-scrollbar-thumb:hover {
    background: var(--lBlue);
}
::selection {
    color: black;
    background: var(--hlBlue);
}
:root {
    --elGrey: #ececec;
    --eelGrey: rgba(255, 255, 255,0.5);

    --bgBlue: #dafffb;
    --acBlue: #dafffb;
    --hlBlue: #a6fdf4;
    --elBlue: #12ddc5;
    --lBlue: #10b9a9;
    --textlBlue: #10b9a9;

    --text: #000000;

    --white: white; 
    --smoke: whitesmoke
}
body {
    background-image: linear-gradient(var(--white), var(--bgBlue));
    margin-top: 50px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
    background-attachment: fixed;
    text-align: center;
    font-family: 'Quicksand', sans-serif;
    transition-duration: 3000ms;
}
.icon {
    width: 100px;
}
.icon.small {
    width: 50px;
}
.heading {
    max-width: 400px;
    width: calc(100vw - 40px);
    font-size: 20px;
    margin-left: auto;
    margin-right: auto;
    color: var(--text);
}
.footer {
    background-color: var(--lBlue);
    width: 100%;
    /* height: 70px; */
    float: bottom;
    /* position: fixed; */
    /* bottom: 0; */
    padding-bottom: 10px;
    /* padding-top: 10px; */
    transition-duration: 300ms;
}
.footer.snap {
    position: fixed;
    bottom: 0;
}
.footer a {
    color: white;
    display: inline-block;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 10px;
    text-decoration: underline;
    transition-duration: 300ms;
    cursor: pointer;
}
.footer p {
    color: white;
    display: inline-block;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 10px;
    margin-bottom: 0;
}
.footer a:hover {
    font-weight: 900;
    transform: translate(0, -2px);
    /* color: black; */
}
@keyframes scrollWide {
    0% { max-width: 0px; }
    100% { max-width: 700px; }
}

.navbar {
    max-width: 700px;
    height: 40px;
    background-color: var(--elGrey);
    border-radius: 25px;
    margin-left: auto;
    margin-right: auto;
    border: 5px solid var(--elGrey);
    /* overflow: hidden; */
    z-index: 1;
    /* animation-name: fadeIn; */
    animation-duration: 1s;
    transition-duration: 300ms;
    user-select: none;
}
.nbItem {
    width: calc((700px / 4) - 8px);
    max-width: calc((100vw / 4) - 16px);
    margin-left: 2px;
    margin-right: 2px;

    font-size: 15px;
    font-weight: 500;
    height: 40px;
    border-radius: 20px;
    line-height: 40px;
    background-color: none;
    transition-duration: 300ms;
    list-style-type: none;
    display: inline-block;
    cursor: pointer;
    overflow: hidden;
    color: var(--text);
}
.grown {
    font-size: 30px;
}
.nbItem:hover {
    background-color: var(--eelGrey);
}
.selected, .selected:hover {
    background-color: var(--elBlue);
    transform: translate(0px, -10px);
}
.nbSecondary {
    text-decoration: underline var(--elBlue);
    font-size: 20px;
    color: var(--text);
}
.linkBox {
    margin-top: 30px;
    padding: 10px;
    margin-bottom: 50px;
}

@keyframes fadeIn {
    0% { opacity: 0; transform: translate(0px, -20px); }
    100% { opacity: 1; transform: translate(0px, 0px); }
}

.link {
    max-width: 400px;
    width: calc(100vw - 40px);
    height: 150px;
    background-color: var(--white);
    margin: 10px;
    display: none;
    border-radius: 30px;
    vertical-align: middle;
    text-align: left;
    position: relative;
    transition-duration: 300ms;
    overflow: hidden;
    color: var(--text);
    cursor: pointer;
    animation: fadeIn 1s;
    animation-fill-mode:backwards;
    user-select: none;
}
.link img, .alink img {
    position: absolute;
    filter: opacity(0.5) brightness(1.1);
    top: 50%;
    transform: translateY(-50%);
    width: calc(100vw - 40px);
    max-width: 400px;
    image-rendering: pixelated;
}
.link img.top, .alink img.top {
    top: 0;
    transform: translateY(0);
}
.link .topText, .alink .topText {
    position: absolute;
}
.link h1, .alink h1 {
    padding-left: 25px;
    font-size: 17px;
    margin-top: 20px;
    margin-bottom: 0;
    transition-duration: 300ms;
    color: var(--text);
}
.link p:not(.linkButton), .alink p:not(.linkButton) {
    font-size: 14px;
    margin-top: 0;
    padding-left: 25px;
    font-weight: 500;
    transition-duration: 300ms;
    color: var(--text);
}
.link .date, .alink .date {
    position: absolute;
    bottom: 0;
    text-align: right;
    padding-right: 25px;
    color: var(--text);
}
.link.invis {
    transition-duration: 0s;
    pointer-events: none;
    opacity: 0;
}
.link:hover:not(.active) {
    box-shadow: var(--lBlue) 6px 6px 0px;
    transform: translate(-3px, -3px);
}

.alink {
    max-width: 400px;
    width: calc(100vw - 40px);
    height: 150px;
    background-color: var(--white);
    margin: 10px;
    border-radius: 30px;
    text-align: left;
    position: fixed;
    overflow: hidden;
    color: var(--black);
    cursor:auto;
    transition-duration: 300ms;
    box-shadow: black 0px 0px 20px;
    user-select: none;
}
.alink:not(.shrinking) img {
    height: 460px;
    position: absolute;
    object-fit: cover;
}
.alink:not(.shrinking) .topText {
    position: absolute;
}
.alink:not(.shrinking) h1 {
    font-size: 25px;
}
.alink:not(.shrinking) p {
    font-size: 17px;
    font-weight: 500;
}
.alink:not(.shrinking) .date {
    padding-right: 28px;
}
.linkButton {
    width: 150px;
    height: 40px;
    line-height: 40px;
    padding-left: 0px;
    border-radius: 20px;
    background-color: var(--lBlue);
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 20px;
    text-align: center;
    color: white;
    transition-duration: 300ms;
}
.linkButton:hover {
    background-color: var(--elBlue);
    transform: translate(0px, -10px);
    /* box-shadow: black 0px 0px 20px; */
}
/* ... */

